--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "5.22.0",
+    "@types/qrcode.react": "^1.0.5",
+    "date-fns": "^4.1.0",
     "next": "16.1.6",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.4",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prisma": "5.22.0",
     "typescript": "^5"
   }
 }
