--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/qrcode.react": "^1.0.5",
     "date-fns": "^4.1.0",
     "firebase": "^12.9.0",
+    "lucide-react": "^0.574.0",
     "next": "16.1.6",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
