--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/qrcode": "^1.5.6",
     "@types/qrcode.react": "^1.0.5",
     "date-fns": "^4.1.0",
     "firebase": "^12.9.0",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.574.0",
     "next": "16.1.6",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.2",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
